# astropy-healpix

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .run_docker_tests.sh  .travis.yml  CHANGES.rst  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  RELEASING.rst  TODO.md  appveyor.yml  azure-pipelines.yml  environment-dev.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml  publish.yml
astrometry.net/: Makefile  bl-nl.h  bl-sort.h  bl.h  healpix.h  ioutils.h  log.c  log.h  mathutil.h  os-features.h  starutil.h  test_healpix-main.c  test_healpix.c
astropy_healpix/: __init__.py  _core.c  bench.py  conftest.py  core.py  core_cython.pxd  core_cython.pyx  healpy.py  high_level.py  interpolation.c  interpolation.h  representation.py  setup_package.py  utils.py
astropy_healpix/tests/: six.py  test_bench.py  test_core.py  test_core_cython.py  test_healpy.py  test_high_level.py  test_utils.py
cextern/: .gitignore  README.md
cextern/astrometry.net/: CuTest.c  CuTest.h  LICENSE  Makefile  an-bool.h  bl-nl.c  bl-nl.inc  bl.c  bl.h  bl.inc  errors.c  errors.h  example.c  healpix-utils.c  healpix-utils.h  healpix.c  healpix.h  ioutils.c  ioutils.h  keywords.h  log.c  log.h  mathutil.c  os-features.h  permutedsort.c  qsort_reentrant.c  starutil.c  starutil.h  starutil.inc  test_healpix-main.c  test_healpix.c  tic.c
cextern/lalsuite/: six.h
cextern/numpy/: ieee754.h
docs/: about.rst  api.rst  boundaries.rst  changes.rst  cone_search.rst  conf.py  coordinates.rst  environment.yml  getting_started.rst  healpy_compat.rst  index.rst  installation.rst  interpolation.rst  low_level_api.rst  performance.rst  using.rst
healpix/: __init__.py  _healpix.pxd  _healpix.pyx  bench.py  conftest.py  core.py  core_cython.pxd  core_cython.pyx  healpy.py  high_level.py  pix.py  setup_package.py
healpix/raw/: __init__.py  example.c  example.h  setup_package.py  wrap.pyx
healpix/raw/tests/: test_wrap.py
healpix/tests/: six.py  test_core.py  test_core_cython.py  test_cython_api.py  test_healpix_cython.py  test_healpy.py  test_high_level.py  test_pix.py
playground/: README.md  healpix_py.py
