[build-system]

requires = ["setuptools>=42.0.0",
            "setuptools_scm",
            "extension-helpers>=1.3,<2",
            "numpy>=2.0.0"]

build-backend = 'setuptools.build_meta'

[tool.cibuildwheel]
skip = "pp*"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:numpy\\.ndarray size changed:RuntimeWarning",
]
