[build-system]

requires = ["setuptools>=77.0.1",
            "setuptools_scm",
            "extension-helpers>=1.3,<2",
            "numpy>=2.0.0"]

build-backend = 'setuptools.build_meta'

[tool.cibuildwheel]
skip = "pp*"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:numpy\\.ndarray size changed:RuntimeWarning",
]
