[build-system]

requires = ["setuptools>=77.0.1",
            "setuptools_scm",
            "extension-helpers>=1.3,<2",
            "numpy>=2.0.0"]

build-backend = 'setuptools.build_meta'

# Currently, free-threaded builds do not support the Python Limited API.
# See https://github.com/python/cpython/issues/111506
[[tool.cibuildwheel.overrides]]
select = "cp3??t-*"
inherit.environment = "append"
environment.EXTENSION_HELPERS_PY_LIMITED_API = ""

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:numpy\\.ndarray size changed:RuntimeWarning",
]
