[metadata]
name = astropy_healpix
description = BSD-licensed HEALPix for Astropy
long_description = file: README.rst
author = Christoph Deil, Thomas Robitaille, and Dustin Lang
author_email = astropy.team@gmail.com
license = BSD 3-Clause
url = https://github.com/astropy/astropy-healpix
edit_on_github = False
github_project = astropy/astropy-healpix
version = 0.5

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    numpy
install_requires =
    numpy
    astropy

[options.extras_require]
test =
    pytest-astropy
    hypothesis<4.42
docs =
    sphinx-astropy
    matplotlib

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py
