[metadata]
name = astropy_healpix
author = Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause
license_files = LICENSE.md
url = https://github.com/astropy/astropy-healpix
description = BSD-licensed HEALPix for Astropy
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/astropy-healpix
keywords = astronomy, astrophysics, astropy, healpix, coordinates
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
    numpy>=1.25
    astropy>=5

[options.extras_require]
test =
    pytest-astropy
    hypothesis
docs =
    sphinx-astropy
    matplotlib

[tool:pytest]
testpaths = "astropy_healpix" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astropy_healpix/conftest.py
    astropy_healpix/*setup_package*
    astropy_healpix/tests/*
    astropy_healpix/*/tests/*
    astropy_healpix/extern/*
    astropy_healpix/version*
    */astropy_healpix/conftest.py
    */astropy_healpix/*setup_package*
    */astropy_healpix/tests/*
    */astropy_healpix/*/tests/*
    */astropy_healpix/extern/*
    */astropy_healpix/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[bdist_wheel]
py_limited_api = cp310
